protocols/tests/adders/adder_d1/first_fail_second_norun.out
error: The two expressions did not evaluate to the same value
   ┌─ adders/adder_d1/add_d1.prot:14:13
   │
14 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 4, RHS Value: 3

Trace 0 execution failed.
